--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-
-	<title>Svelte app</title>
-
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
-
-	<script defer src='/build/bundle.js'></script>
+	<title>App</title>
+	<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-auth.js"></script>
+	<link rel='stylesheet' href='./build/bundle.css'>
+	<script defer src='./build/bundle.js'></script>
 </head>
-
 <body>
 </body>
 </html>
