--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 	<title>App</title>
+	<!-- favicon -->
+	<link rel='icon' type='image/png' href='./favicon.png'>
 	<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.4.0/firebase-auth.js"></script>
 	<link rel='stylesheet' href='./build/bundle.css'>
